<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DealActivity">

    <TextView
        android:id="@+id/lbl_Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:labelFor="@id/txt_Title"
        android:text="@string/label_title"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext"
        android:inputType="text"
        android:padding="7dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/lbl_Title"
        app:layout_constraintStart_toStartOf="@+id/lbl_Title"
        app:layout_constraintTop_toBottomOf="@+id/lbl_Title" />

    <TextView
        android:id="@+id/lbl_Price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:labelFor="@id/txt_Price"
        android:text="@string/label_price"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_Title"
        app:layout_constraintStart_toStartOf="@+id/txt_Title"
        app:layout_constraintTop_toBottomOf="@+id/txt_Title" />

    <EditText
        android:id="@+id/txt_Price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext"
        android:inputType="numberDecimal"
        android:padding="7dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/lbl_Price"
        app:layout_constraintStart_toStartOf="@+id/lbl_Price"
        app:layout_constraintTop_toBottomOf="@+id/lbl_Price" />

    <TextView
        android:id="@+id/lbl_Description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:labelFor="@id/txt_Description"
        android:text="@string/label_description"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_Price"
        app:layout_constraintStart_toStartOf="@+id/txt_Price"
        app:layout_constraintTop_toBottomOf="@+id/txt_Price" />

    <EditText
        android:id="@+id/txt_Description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext"
        android:inputType="text"
        android:padding="7dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/lbl_Description"
        app:layout_constraintStart_toStartOf="@+id/lbl_Description"
        app:layout_constraintTop_toBottomOf="@+id/lbl_Description" />

    <Button
        android:id="@+id/btn_UploadImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_button"
        android:drawableStart="@drawable/baseline_insert_photo_white_24"
        android:drawablePadding="10dp"
        android:text="@string/btn_upload_image"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Description" />

    <ImageView
        android:id="@+id/img_Deal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_UploadImage"
        app:srcCompat="@android:color/transparent" />
</androidx.constraintlayout.widget.ConstraintLayout>